--- a/player.html
+++ b/player.html
@@ -68,6 +68,7 @@
                   borderColor: "#000000",
                   borderStyle: "solid",
                   borderWidth: "1",
+                  backgroundColor: "#ffffff",
                 },
               },
               12: {
@@ -77,6 +78,7 @@
                   borderColor: "#000000",
                   borderStyle: "solid",
                   borderWidth: "1",
+                  backgroundColor: "#ffffff",
                 },
               },
             };
