--- a/player.html
+++ b/player.html
@@ -3,7 +3,7 @@
   <head>
     <script src="compiler.js" type="text/javascript"></script>
     <script src="render.js" type="text/javascript"></script>
-    <script src="depth.js" type="text/javascript"></script>
+    <script src="samples/motiontween.js" type="text/javascript"></script>
     <script type="text/javascript">
       function main() {
         const frameEvents = window.frameEvents;
