--- a/player.html
+++ b/player.html
@@ -3,7 +3,7 @@
   <head>
     <script src="compiler.js" type="text/javascript"></script>
     <script src="render.js" type="text/javascript"></script>
-    <script src="samples/motiontween.js" type="text/javascript"></script>
+    <script src="samples/inputtext.js" type="text/javascript"></script>
     <script type="text/javascript">
       function main() {
         const frameEvents = window.frameEvents;
@@ -79,6 +79,25 @@
                   borderStyle: "solid",
                   borderWidth: "1",
                   backgroundColor: "#ffffff",
+                },
+              },
+              21: {
+                type: "text",
+                text: {
+                  content: "",
+                  borderColor: "#000000",
+                  borderStyle: "solid",
+                  borderWidth: "1",
+                  editable: true,
+                },
+              },
+              22: {
+                type: "text",
+                text: {
+                  content: "計算",
+                  borderColor: "#000000",
+                  borderStyle: "solid",
+                  borderWidth: "1",
                 },
               },
             };
