:heavy_plus_sign: 追加

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,6 +3,11 @@
   <head>
     <script type="text/javascript">
       window.onload = function() {
+        const AssetsManager = function() {
+          const instance = {};
+          return instance;
+        };
+
         const RootController = function() {
           const instance = {};
           return instance;
