--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,28 @@
       type="text/javascript"
       src="../prototype/samples/slideshowloop.js"
     ></script>
+    <script
+      src="../prototype/samples/slideshowstop.js"
+      type="text/javascript"
+    ></script>
+    <script
+      src="../prototype/samples/slideshowlabel.js"
+      type="text/javascript"
+    ></script>
+    <script
+      src="../prototype/samples/motiontween.js"
+      type="text/javascript"
+    ></script>
+    <script src="../prototype/samples/depth.js" type="text/javascript"></script>
+    <script
+      src="../prototype/samples/inputtext.js"
+      type="text/javascript"
+    ></script>
+    <script
+      src="../prototype/samples/typing.js"
+      type="text/javascript"
+    ></script>
+
     <script type="text/javascript" src="assets.js"></script>
     <script type="text/javascript">
       window.onload = function () {
