--- a/frontend/index.html
+++ b/frontend/index.html
@@ -46,7 +46,7 @@
         };
 
         const assetsManager = AssetsManager();
-        const compiler = Compiler(); // compile時にassetへの参照に置き換えたい
+        const compiler = Compiler();
         const renderer = Renderer();
         const rootController = RootController();
         const component = Component(
