--- a/frontend/index.html
+++ b/frontend/index.html
@@ -51,7 +51,7 @@
         const rootController = RootController();
         const component = Component(
           rootController,
-          compiler.compile(window.frameEventsSlideshowStop),
+          compiler.compile(window.frameEventsMotionTween),
           ScreenObjectsManager(),
           renderer,
           assetsManager
