--- a/frontend/index.html
+++ b/frontend/index.html
@@ -52,7 +52,7 @@
         const rootController = RootController();
         const component = Component(
           rootController,
-          compiler.compile(window.frameEventsDepth),
+          compiler.compile(window.frameEventsSlideshowLabel),
           ScreenObjectsManager(),
           renderer,
           assetsManager
