--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,27 +9,27 @@
 
     <script
       type="text/javascript"
-      src="../prototype/samples/slideshowloop.js"
+      src="./samples/slideshowloop.js"
     ></script>
     <script
-      src="../prototype/samples/slideshowstop.js"
+      src="./samples/slideshowstop.js"
       type="text/javascript"
     ></script>
     <script
-      src="../prototype/samples/slideshowlabel.js"
+      src="./samples/slideshowlabel.js"
       type="text/javascript"
     ></script>
     <script
-      src="../prototype/samples/motiontween.js"
+      src="./samples/motiontween.js"
       type="text/javascript"
     ></script>
-    <script src="../prototype/samples/depth.js" type="text/javascript"></script>
+    <script src="./samples/depth.js" type="text/javascript"></script>
     <script
-      src="../prototype/samples/inputtext.js"
+      src="./samples/inputtext.js"
       type="text/javascript"
     ></script>
     <script
-      src="../prototype/samples/typing.js"
+      src="./samples/typing.js"
       type="text/javascript"
     ></script>
 
@@ -52,7 +52,7 @@
         const rootController = RootController();
         const component = Component(
           rootController,
-          compiler.compile(window.frameEventsDepth),
+          compiler.compile(window.frameEventsTyping),
           ScreenObjectsManager(),
           renderer,
           assetsManager
