--- a/frontend/index.html
+++ b/frontend/index.html
@@ -55,7 +55,7 @@
           compiler.compile(window.frameEventsTyping),
           ScreenObjectsManager(),
           renderer,
-          assetsManager
+          assetsManager,
         );
         component.play();
       };
