:heavy_plus_sign: 実装追加

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -58,6 +58,7 @@
           assetsManager,
         );
         component.play();
+        console.log(component);
       };
     </script>
     <style></style>
