--- a/frontend/index.html
+++ b/frontend/index.html
@@ -58,7 +58,7 @@
           assetsManager,
         );
         component.play();
-        console.log(component);
+        console.debug(component);
       };
     </script>
     <style></style>
